Loot fix, docker