@@ -1,7 +1,9 @@
 package spring.backend.game.security;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -14,6 +16,12 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
 public class SecurityConfig {
+
+    // Разрешённые CORS-источники. Задаётся через env GAME_CORS_ALLOWED_ORIGINS
+    // (comma-separated). Значение * разрешает любые источники — удобно,
+    // когда домен выдаёт случайный туннель (cloudflared/ngrok).
+    @Value("${game.cors.allowed-origins:http://localhost:8080,http://localhost:3000,http://192.168.8.96:3000}")
+    private String[] allowedOrigins;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -29,7 +37,8 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://192.168.8.96:3000"));
+        // Patterns: можно указывать конкретные URLs или "*".
+        configuration.setAllowedOriginPatterns(Arrays.asList(allowedOrigins));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
